--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.11.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
