--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 			<version>3.11.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20201115</version>
+		</dependency>
+
 
 	</dependencies>
 
